test_scripts/errors/break_outside_loop.stderr
 1 | print("before")
 2 | break
     ^^^^^
Error: `break` outside of a loop
